test prettier format

--- a/src/app/components/typing-area/typing-area/typing-area.component.html
+++ b/src/app/components/typing-area/typing-area/typing-area.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="typing-area">
   <div>
     <span class="head">Name:</span>
-    <input type="text" formControlName="name">
+    <input type="text" formControlName="name" />
   </div>
   <div>
     <span class="head">Message:</span>
