--- a/src/app/components/typing-area/typing-area/typing-area.component.scss
+++ b/src/app/components/typing-area/typing-area/typing-area.component.scss
@@ -26,7 +26,8 @@
     width: 200px;
     height: 20px;
   }
-  textarea, input {
+  textarea,
+  input {
     border: solid 1px rgb(81, 162, 199);
   }
   button {
